# grblpanel_firmware

./: BOARDS.md  CMakeLists.txt  Kconfig  README.md  TODO.md  platformio.ini  prj.conf
boards/: blackpill_f411ce.conf  blackpill_f411ce.overlay  grblpanel_g0b1re.conf  grblpanel_g0b1re.overlay  native_posix.conf  native_posix.overlay  nucleo_f411re.overlay  nucleo_f446re.conf  nucleo_f446re.overlay  nucleo_f446ze.overlay  nucleo_g0b1re.overlay
boards/arm/grblpanel_g01bre/: Kconfig.board  Kconfig.defconfig  board.cmake  grblpanel_g0b1re.dts  grblpanel_g0b1re.yaml  grblpanel_g0b1re_defconfig
boards/arm/grblpanel_g01bre/support/: openocd.cfg
drivers/: CMakeLists.txt  Kconfig
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/encoder_stm32/: CMakeLists.txt  Kconfig  encoder_stm32.c
drivers/zephyr/dts/bindings/sensor/: st,stm32-encoder.yaml  st,stm32-quadrature.yaml
lib/adp5589/src/: adp5589.c  adp5589.h
src/: VeraMono_24.c  VeraMono_48.c  adp5589.c  adp5589.h  canbus.c  canbus.h  canbus_ids.h  display.c  display.h  keypad.c  keypad.h  keypad_4x4.h  keypad_5x5.h  keypad_6x11.h  keypad_bitfields.h  keypad_defaults.h  main.c  main.h  matrix.c  matrix.h  modbus.c  modbus.h  quadrature.c  quadrature.h  registers.h  utils.c  utils.h
zephyr/: CMakeLists.txt  Kconfig  nucleo_f446ze.overlay  prj.conf
zephyr/boards/: nucleo_f411re.overlay
